--- a/Lessons 18/index.css
+++ b/Lessons 18/index.css
@@ -3,3 +3,17 @@
  padding: 0;
  box-sizing: border-box;
 }
+.title{
+    display: flex;
+justify-content: space-between;
+}
+.icons {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
