--- a/Lessons 20 Control/Lesson 20.css
+++ b/Lessons 20 Control/Lesson 20.css
@@ -9,22 +9,16 @@
     align-items: center;
 background: #FFFFFF;
 height: 100px;
-left: 0px;
-top: 100px;
 }
 .logo {
     position: absolute;
 width: 131px;
 height: 72px;
-left: 100px;
-top: 17px;
 }
 .UA { 
     position: absolute;
 width: 22px;
 height: 21px;
-left: 285px;
-top: 28px;
 font-weight: normal;
 font-size: 16px;
 line-height: 21px;
@@ -34,8 +28,6 @@ text-align: center;
     position: absolute;
     width: 24px;
     height: 21px;
-    left: 284px;
-    top: 51px;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -47,8 +39,6 @@ text-align: center;
     position: absolute;
     width: 35px;
     height: 20px;
-    left: 279px;
-    top: 51px;
     background: #4AD295;
     border-radius: 2px;
 }
@@ -56,8 +46,6 @@ text-align: center;
     position: absolute;
 width: 75px;
 height: 19px;
-left: 365px;
-top: 31px;
 font-style: normal;
 font-weight: normal;
 font-size: 15px;
@@ -68,8 +56,6 @@ color: #393939;
     position: absolute;
 width: 74px;
 height: 19px;
-left: 365px;
-top: 54px;
 font-style: normal;
 font-weight: normal;
 font-size: 15px;
@@ -83,8 +69,6 @@ color: #393939;
     position: absolute;
     width: 128px;
     height: 21px;
-    left: 627px;
-    top: 29px;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -96,9 +80,12 @@ color: #393939;
 position: absolute;
 width: 39px;
 height: 39px;
-left: 762px;
-top: 32px;
 }
 .box-numders {
+    display: flex;
+}
+.box-usd {
+    width: 131px;
+    height: 72px;
     display: flex;
 }
