--- a/Lessons 20 Control/Lessons 20 copy.css
+++ b/Lessons 20 Control/Lessons 20 copy.css
@@ -3,32 +3,47 @@
     margin: 0;
     box-sizing: border-box;
 }
-ul {
+.menu2 {
+    padding: 25px;
+    width: 1200px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     list-style-type: none;
 }
 .RU {
-    position: absolute;
-    width: 24px;
+width: 24px;
 height: 21px;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
 line-height: 21px;
 color: #FFFFFF;
-}
-.box-ru {
-    position: absolute;
-width: 35px;
-height: 20px;
 background: #4AD295;
 border-radius: 2px;
-display: flex;
-justify-content: space-around;
 }
+
 .numbers {
     display: flex;
     align-items: center;
+}
+.logo-1 {
+    position: absolute;
+width: 131px;
+height: 72px;
+}
+.header{
+    display: flex;
+    justify-content: space-around;
+}
+.UA {
+width: 24px;
+height: 21px;
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+line-height: 21px;
+color: #FFFFFF;
+background: #4AD295;
+border-radius: 2px;  
 }
